project(ps3emu)

include_directories($ENV{NVIDIA_TEXTURE_TOOLS}/src)
include_directories(SYSTEM $ENV{NVIDIA_TEXTURE_TOOLS}/extern/poshlib)

set(SRC
    ELFLoader.cpp
    ELFLoader.h
    ppu/ppu_dasm.cpp
    ppu/ppu_dasm.h
    ppu/ppu_dasm_forms.h
    ncall.cpp
    utils.h
    utils.cpp
    MainMemory.h
    MainMemory.cpp
    Process.h
    Process.cpp
    log.cpp
    ppu/PPUThread.h
    ppu/PPUThread.cpp
    ppu/InterruptPPUThread.h
    ppu/InterruptPPUThread.cpp
    ppu/CallbackThread.h
    ppu/CallbackThread.cpp
    ContentManager.h
    ContentManager.cpp
    InternalMemoryManager.h
    InternalMemoryManager.cpp
    spu/SPUThread.cpp
    spu/SPUDasm.cpp
    shaders/shader_dasm.h
    shaders/shader_dasm.cpp
    shaders/ShaderRewriter.h
    shaders/ShaderRewriter.cpp
    shaders/ShaderGenerator.h
    shaders/ShaderGenerator.cpp
    shaders/AST.h
    shaders/AST.cpp
    shaders/DefaultVisitor.h
    shaders/DefaultVisitor.cpp
    rsx/Rsx.h
    rsx/Rsx.cpp
    rsx/RsxLoop.cpp
    rsx/GLTexture.cpp
    rsx/GLFramebuffer.cpp
    rsx/GLBuffer.cpp
    rsx/Tracer.cpp
    rsx/TextureRenderer.cpp
    rsx/FragmentShaderUpdateFunctor.cpp
    rsx/DXT.cpp
    gcmviz/GcmDatabase.cpp
)

add_library(ps3emu ${SRC})
target_link_libraries(ps3emu libs
    ${Boost_LIBRARIES}
    ${GLFW3_LIBRARIES}
    ${CRYPTO_LIBRARIES}
    ${SQLITE3_LIBRARIES}
    ${PNG_LIBRARIES}
    ${ZLIB_LIBRARIES}
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/nvimage/libnvimage.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/bc7/libbc7.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/bc6h/libbc6h.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/nvmath/libnvmath.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/nvcore/libnvcore.a
    pthread
)