project(ps3emu)

include_directories($ENV{NVIDIA_TEXTURE_TOOLS}/src)
include_directories(SYSTEM $ENV{NVIDIA_TEXTURE_TOOLS}/extern/poshlib)

set(SRC
    ELFLoader.cpp
    ELFLoader.h
    ppu/ppu_dasm.cpp
    ppu/ppu_dasm.h
    ppu/ppu_dasm_forms.h
    exports/ncall.cpp
    exports/syscall.cpp
    utils.h
    utils.cpp
    MainMemory.h
    MainMemory.cpp
    Process.h
    Process.cpp
    log.cpp
    state.cpp
    spu/SPUThread.cpp
    spu/SPUDasm.cpp
    spu/SPUChannels.cpp
    ppu/PPUThread.h
    ppu/PPUThread.cpp
    ppu/InterruptPPUThread.h
    ppu/InterruptPPUThread.cpp
    ppu/CallbackThread.h
    ppu/CallbackThread.cpp
    ContentManager.h
    ContentManager.cpp
    InternalMemoryManager.h
    InternalMemoryManager.cpp
    shaders/shader_dasm.h
    shaders/shader_dasm.cpp
    shaders/ShaderRewriter.h
    shaders/ShaderRewriter.cpp
    shaders/ShaderGenerator.h
    shaders/ShaderGenerator.cpp
    shaders/AST.h
    shaders/AST.cpp
    shaders/DefaultVisitor.h
    shaders/DefaultVisitor.cpp
    rsx/Rsx.h
    rsx/Rsx.cpp
    rsx/RsxLoop.cpp
    rsx/GLTexture.cpp
    rsx/GLFramebuffer.cpp
    rsx/GLBuffer.cpp
    rsx/Tracer.cpp
    rsx/TextureRenderer.cpp
    rsx/FragmentShaderUpdateFunctor.cpp
    rsx/DXT.cpp
    gcmviz/GcmDatabase.cpp
    
    libs/sys.cpp
    libs/fs.cpp
    libs/Controller.cpp
    libs/libsysutil.cpp
    libs/cellGame.cpp
    libs/sceNp2.cpp
    libs/sceNp.cpp
    libs/spu/sysSpu.cpp
    libs/audio/configuration.cpp
    libs/audio/libaudio.cpp
    libs/sync/lwmutex.cpp
    libs/sync/mutex.cpp
    libs/sync/cond.cpp
    libs/sync/lwcond.cpp
    libs/sync/rwlock.cpp
    libs/sync/queue.cpp
    libs/sync/event_flag.cpp
    libs/graphics/gcm.cpp
    libs/graphics/gcm_buffers.cpp
    libs/graphics/sysutil_sysparam.cpp
    libs/graphics/graphics.cpp
    libs/graphics/GL/src/glad.c
    libs/message.cpp
)

add_library(ps3emu SHARED ${SRC})
target_link_libraries(ps3emu
    ${Boost_LIBRARIES}
    ${GLFW3_LIBRARIES}
    ${CRYPTO_LIBRARIES}
    ${SQLITE3_LIBRARIES}
    ${PNG_LIBRARIES}
    ${ZLIB_LIBRARIES}
    ${FREETYPE2_LIBRARIES}
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/nvimage/libnvimage.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/bc7/libbc7.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/bc6h/libbc6h.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/nvmath/libnvmath.a
    $ENV{NVIDIA_TEXTURE_TOOLS}/src/nvcore/libnvcore.a
    pthread
    dl
)
